--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,7 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Setup nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18.x"
       - name: Install dependencies
         run: npm ci
       - name: Lint code
@@ -20,7 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Setup nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18.x"
       - name: Install dependencies
         run: npm ci
       - name: Build website
@@ -29,8 +37,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: path/dist
-          
+          path: dist
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
