--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -42,5 +42,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Output the files
+        run: ls -lah
       - name: Deploy
         run: echo "Deploying..."
