--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -54,6 +54,6 @@ jobs:
       - name: Output the files
         run: ls -lah
       - name: Output file name
-        run: echo "${{ needs.build.outputs.script-file }}""
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
